# ServiceWorker

./: .gitignore  README.md
serviceworker/: LICENSE.txt  README.rst  pyproject.toml  setup.py
serviceworker/api/: main.py
serviceworker/serviceworker/: leftpad.py
serviceworker/serviceworker.egg-info/: PKG-INFO  SOURCES.txt
serviceworker/serviceworker/examples/: example_basewrapper.py  example_requests.py
serviceworker/serviceworker/src/: base_http_client.py  basewrapper.py  etl.py  request_http_client.py
serviceworker/serviceworker/tests/: leftpad.py  test_etl.py  test_requests_http_client.py
